<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="audio_mode_bluetooth">Bluetooth</string>
    <string name="audio_mode_earpiece">Handset earpiece</string>
    <string name="audio_mode_speaker">Speaker</string>
    <string name="audio_mode_wired_headset">Wired headset</string>
    <string name="calling_via_template">Calling via %s</string>
    <string name="card_title_call_ended">Call ended</string>
    <string name="card_title_callback_number">"Your callback number
 %1$s"</string>
    <string name="card_title_callback_number_emergency">"Your emergency callback number
 %1$s"</string>
    <string name="card_title_conf_call">Conference call</string>
    <string name="card_title_dialing">Dialing</string>
    <string name="card_title_hanging_up">Hanging up</string>
    <string name="card_title_in_call">In call</string>
    <string name="card_title_incoming_call">Incoming call</string>
    <string name="card_title_my_phone_number">My number is %s</string>
    <string name="card_title_on_hold">On hold</string>
    <string name="card_title_redialing">Retrying</string>
    <string name="card_title_video_call">Video call</string>
    <string name="card_title_video_call_error">Cannot connect video call</string>
    <string name="card_title_video_call_requesting">Requesting video</string>
    <string name="common_google_play_services_api_unavailable_text">%1$s requires one or more Google Play services that are not currently available. Please contact the developer for assistance.</string>
    <string name="common_google_play_services_enable_button">Enable Google Play services</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Get Google Play services</string>
    <string name="common_google_play_services_install_text_phone">"%1$s won't run without Google Play services, which are missing from your phone."</string>
    <string name="common_google_play_services_install_text_tablet">"%1$s won't run without Google Play services, which are missing from your tablet."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_invalid_account_text">The specified account does not exist on this device. Please choose a different account.</string>
    <string name="common_google_play_services_invalid_account_title">Invalid Account</string>
    <string name="common_google_play_services_network_error_text">A data connection is required to connect to Google Play services.</string>
    <string name="common_google_play_services_network_error_title">Network Error</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_resolution_required_text">Please complete action required by %1$s.</string>
    <string name="common_google_play_services_resolution_required_title">Google Play services requires an action</string>
    <string name="common_google_play_services_restricted_profile_text">Accessing accounts from a restricted profile is not supported.</string>
    <string name="common_google_play_services_restricted_profile_title">Restricted Profile</string>
    <string name="common_google_play_services_sign_in_failed_text">Error signing in the specified account. Please choose a different account.</string>
    <string name="common_google_play_services_sign_in_failed_title">Sign in failed</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. If the problem persists, please contact the developer for assistance.</string>
    <string name="common_google_play_services_unsupported_text">%1$s relies on Google Play services, which is not supported by your device. Contact the manufacturer for assistance.</string>
    <string name="common_google_play_services_unsupported_title">Google Play services</string>
    <string name="onscreenAddCallText">Add call</string>
    <string name="onscreenChangeToVoiceText">Change to voice call</string>
    <string name="onscreenHoldText">Hold</string>
    <string name="onscreenManageConferenceText">Manage conference call</string>
    <string name="onscreenMergeCallsText">Merge calls</string>
    <string name="onscreenOverflowText">More options</string>
    <string name="onscreenPauseVideoText">Pause video</string>
    <string name="onscreenSwapCallsText">Swap</string>
    <string name="onscreenSwitchCameraText">Switch camera</string>
    <string name="onscreenVideoCallText">Video call</string>
    <string name="overflowAddMenuItemText">Add call</string>
    <string name="overflowHoldMenuItemText">Hold call</string>
    <string name="call_menu_during_call_detail">You can perform the following actions during calls:</string>
    <string name="call_menu_during_call_list1">Tap %s to enter numbers during a call.</string>
    <string name="call_menu_during_call_list1_tts">Tap the keypad button to enter numbers during a call.</string>
    <string name="call_menu_during_call_list2">Tap %s to turn on the speakerphone.</string>
    <string name="call_menu_during_call_list2_tts">Tap the speaker button to turn on the speakerphone.</string>
    <string name="call_menu_during_call_list3">Tap %s to mute all sound from your end of the call.</string>
    <string name="call_menu_during_call_list3_tts">Tap the mute button to mute all sound from your end of the call.</string>
    <string name="call_menu_during_call_list4">Tap %s to continue a call on a connected Bluetooth device.</string>
    <string name="call_menu_during_call_list4_tts">Tap the Bluetooth button to continue a call on a connected Bluetooth device.</string>
    <string name="call_menu_during_call_list5">Tap %s to end a call.</string>
    <string name="call_menu_during_call_list5_tts">Tap the end call button to end a call.</string>
    <string name="call_menu_during_call_list6">Tap %s to increase the volume.</string>
    <string name="call_menu_during_call_list6_tts">Tap the extra volume button to increase the volume.</string>
    <string name="call_menu_during_call_list7">Tap %s to call another person and add them to the current call.</string>
    <string name="call_menu_during_call_list7_tts">Tap the add call button to call another person and add them to the current call.</string>
    <string name="description_secOnscreenMessageText">Message</string>
    <string name="description_secOnscreenVideoCallText">Video call</string>
    <string name="group_voice_call">Group call</string>
    <string name="onscreenBluetoothTextOff">Switch to headset</string>
    <string name="onscreenBluetoothTextOn">Switch to phone</string>
    <string name="secOnscreenAddToContactsText">Add to contacts</string>
    <string name="secOnscreenContactText">Contacts</string>
    <string name="secOnscreenEmailText">Email</string>
    <string name="secOnscreenGalleryText">Gallery</string>
    <string name="secOnscreenInternetText">Internet</string>
    <string name="secOnscreenKeypadText">Keypad</string>
    <string name="secOnscreenMemoText">Memo</string>
    <string name="secOnscreenMenuAddCallText">Add call</string>
    <string name="secOnscreenMenuCallTransfer">Transfer</string>
    <string name="secOnscreenMenuCaptureImageText">Capture image</string>
    <string name="secOnscreenMenuDisableExtraVolume">Disable extra volume</string>
    <string name="secOnscreenMenuDisableExtraVolumeTTS">Disable extra volume</string>
    <string name="secOnscreenMenuDualCameraOffText">Disable dual camera</string>
    <string name="secOnscreenMenuDualCameraOnText">Enable dual camera</string>
    <string name="secOnscreenMenuEnableExtraVolume">Enable extra volume</string>
    <string name="secOnscreenMenuEnableExtraVolumeTTS">Enable extra volume</string>
    <string name="secOnscreenMenuHideMeText">Hide me</string>
    <string name="secOnscreenMenuImageEffectText">Image effect</string>
    <string name="secOnscreenMenuOutgoingImageText">Outgoing image</string>
    <string name="secOnscreenMenuShowMeText">Show me</string>
    <string name="secOnscreenMenuSpeakerOffText">Turn off speaker</string>
    <string name="secOnscreenMenuSpeakerOnText">Turn on speaker</string>
    <string name="secOnscreenMenuStartRecordText">Record video</string>
    <string name="secOnscreenMenuStopRecordText">Stop</string>
    <string name="secOnscreenMenuSwitchCameraText">Switch camera</string>
    <string name="secOnscreenMenuSwitchToAudioDeviceText">Switch to audio device</string>
    <string name="secOnscreenMenuSwitchToPhoneText">Switch to phone</string>
    <string name="secOnscreenMenuSwitchToVideoCallText">Switch to video call</string>
    <string name="secOnscreenMenuSwitchToVoiceCallText">Switch to voice call</string>
    <string name="secOnscreenMenuSwitchVideoDisplay">Switch video displays</string>
    <string name="secOnscreenMenuVideoConfCallText">Invite new participant</string>
    <string name="secOnscreenMenuViewInFullScreenText">View in full screen</string>
    <string name="secOnscreenMenuViewInOriginalSizeText">View in original size</string>
    <string name="secOnscreenMessageText">Message</string>
    <string name="secOnscreenPlannerText">S Planner</string>
    <string name="secOnscreenRecordText">Record</string>
    <string name="secOnscreenVideoCallText">Video call</string>
    <string name="secOnscreenViewContactText">View contact</string>
    <string name="secOnscreenVoiceCallText">Call</string>
    <string name="send_file_via_filetransfer">Share file via File transfer</string>
    <string name="send_msg">Send Message</string>
    <string name="default_editor_account">Default account for new contacts</string>
    <string name="discard">CANCEL</string>
    <string name="display_options_sort_list_by">Sort by</string>
    <string name="display_options_view_names_as">Name format</string>
    <string name="ivr_shortcut_message">Save this direct call path for quick access when you call next time.</string>
    <string name="onscreenHoldText_unselected">Hold Call</string>
    <string name="onscreenMuteText_unselected">Mute</string>
    <string name="onscreenShowDialpadText_unselected">Show Dialpad</string>
    <string name="save">SAVE</string>
    <string name="save_shortcut">Save Shortcut</string>
    <string name="secOnscreenMenuEmergencyCall">Emergency call</string>
    <string name="setting_about">About Contacts</string>
</resources>