<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@id/addCall" android:visible="false" android:title="@string/secOnscreenMenuAddCallText" />
    <item android:id="@id/holdButton" android:visible="false" android:title="@string/overflowHoldMenuItemText" />
    <item android:id="@id/imageEffect" android:visible="false" android:title="@string/secOnscreenMenuImageEffectText" />
    <item android:id="@id/hideMe" android:visible="false" android:title="@string/secOnscreenMenuHideMeText" />
    <item android:id="@id/showMe" android:visible="false" android:title="@string/secOnscreenMenuShowMeText" />
    <item android:id="@id/outgoingImage" android:visible="false" android:title="@string/secOnscreenMenuOutgoingImageText" />
    <item android:id="@id/captureImage" android:visible="false" android:title="@string/secOnscreenMenuCaptureImageText" />
    <item android:id="@id/startRecordFarEnd" android:visible="false" android:title="@string/secOnscreenMenuStartRecordText" />
    <item android:id="@id/stopRecordFarEnd" android:visible="false" android:title="@string/secOnscreenMenuStopRecordText" />
    <item android:id="@id/switchCamera" android:visible="false" android:title="@string/secOnscreenMenuSwitchCameraText" />
    <item android:id="@id/keypadButton" android:visible="false" android:title="@string/secOnscreenKeypadText" />
    <item android:id="@id/speakerOnButton" android:visible="false" android:title="@string/secOnscreenMenuSpeakerOnText" />
    <item android:id="@id/speakerOffButton" android:visible="false" android:title="@string/secOnscreenMenuSpeakerOffText" />
    <item android:id="@id/switchToHeadsetButton" android:visible="false" android:title="@string/secOnscreenMenuSwitchToAudioDeviceText" />
    <item android:id="@id/switchToPhoneButton" android:visible="false" android:title="@string/secOnscreenMenuSwitchToPhoneText" />
    <item android:id="@id/dualCameraOnButton" android:visible="false" android:title="@string/secOnscreenMenuDualCameraOnText" />
    <item android:id="@id/dualCameraOffButton" android:visible="false" android:title="@string/secOnscreenMenuDualCameraOffText" />
    <item android:id="@id/viewInOriginalSize" android:visible="false" android:title="@string/secOnscreenMenuViewInOriginalSizeText" />
    <item android:id="@id/viewInFullScreen" android:visible="false" android:title="@string/secOnscreenMenuViewInFullScreenText" />
    <item android:id="@id/Bluetooth" android:visible="false" android:title="@string/audio_mode_bluetooth" />
    <item android:id="@id/VideoConfCallButton" android:visible="false" android:title="@string/secOnscreenMenuVideoConfCallText" />
    <item android:id="@id/swtichToVoiceCall" android:visible="false" android:title="@string/secOnscreenMenuSwitchToVoiceCallText" />
    <item android:id="@id/switchVideoDisplay" android:visible="false" android:title="@string/secOnscreenMenuSwitchVideoDisplay" />
    <item android:id="@id/callTransfer" android:visible="false" android:title="@string/secOnscreenMenuCallTransfer" />
    <item android:id="@id/pushSoftPhone" android:title="@string/secOnscreenMenuCallTransfer" />
    <item android:id="@id/emergencyCall" android:title="@string/secOnscreenMenuEmergencyCall" />
</menu>