<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android">
    <com.android.contacts.common.preference.SortOrderPreference android:icon="@null" android:title="@string/display_options_sort_list_by" android:key="sortOrder" android:dialogTitle="@string/display_options_sort_list_by" />
    <com.android.contacts.common.preference.DisplayOrderPreference android:icon="@null" android:title="@string/display_options_view_names_as" android:key="displayOrder" android:dialogTitle="@string/display_options_view_names_as" />
    <com.android.contacts.common.preference.DefaultAccountPreference android:icon="@null" android:title="@string/default_editor_account" android:key="accounts" android:dialogTitle="@string/default_editor_account" />
    <Preference android:icon="@null" android:title="@string/setting_about" android:key="about" android:order="@integer/about_contacts_order_number" />
</PreferenceScreen>