<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:background="@color/white" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:helphub="http://schemas.android.com/apk/res-auto">
    <RelativeLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" style="@style/HelpPageLayoutBase">
        <ImageView android:layout_gravity="center" android:id="@id/help_list_item_image" android:layout_width="wrap_content" android:layout_marginTop="@dimen/helppage_image_margin_top" android:layout_marginBottom="@dimen/helppage_image_margin_bottom" android:src="@drawable/help_01" style="@style/HelpItemImage" />
        <TextView android:id="@id/help_list_item_text" android:paddingBottom="@dimen/desc_text_margin_between" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/call_menu_during_call_detail" android:layout_below="@id/help_list_item_image" style="@style/HelpItemDescText" />
        <RelativeLayout android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_below="@id/help_list_item_text" android:layout_marginStart="@dimen/desc_text_margin_start">
            <TextView android:id="@id/help_list_item_dot_1" android:layout_width="wrap_content" android:layout_height="wrap_content" style="@style/HelpItemDescTextDot" />
            <com.android.incallui.help.HelpHubTextView android:id="@id/help_list_item_1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/call_menu_during_call_list7" android:layout_below="@id/help_list_item_text" android:contentDescription="@string/call_menu_during_call_list7_tts" android:layout_toEndOf="@id/help_list_item_dot_1" helphub:image="@drawable/help_ic_add" style="@style/HelpItemDescText" />
            <TextView android:id="@id/help_list_item_dot_2" android:paddingTop="@dimen/desc_text_with_dot_margin_between" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_below="@id/help_list_item_1" style="@style/HelpItemDescTextDot" />
            <com.android.incallui.help.HelpHubTextView android:id="@id/help_list_item_2" android:paddingTop="@dimen/desc_text_with_dot_margin_between" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/call_menu_during_call_list6" android:layout_below="@id/help_list_item_1" android:contentDescription="@string/call_menu_during_call_list6_tts" android:layout_toEndOf="@id/help_list_item_dot_2" helphub:image="@drawable/help_ic_volume" style="@style/HelpItemDescText" />
            <TextView android:id="@id/help_list_item_dot_3" android:paddingTop="@dimen/desc_text_with_dot_margin_between" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_below="@id/help_list_item_2" style="@style/HelpItemDescTextDot" />
            <com.android.incallui.help.HelpHubTextView android:id="@id/help_list_item_3" android:paddingTop="@dimen/desc_text_with_dot_margin_between" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/call_menu_during_call_list4" android:layout_below="@id/help_list_item_2" android:contentDescription="@string/call_menu_during_call_list4_tts" android:layout_toEndOf="@id/help_list_item_dot_3" helphub:image="@drawable/help_ic_bluetooth" style="@style/HelpItemDescText" />
            <TextView android:id="@id/help_list_item_dot_4" android:paddingTop="@dimen/desc_text_with_dot_margin_between" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_below="@id/help_list_item_3" style="@style/HelpItemDescTextDot" />
            <com.android.incallui.help.HelpHubTextView android:id="@id/help_list_item_4" android:paddingTop="@dimen/desc_text_with_dot_margin_between" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/call_menu_during_call_list2" android:layout_below="@id/help_list_item_3" android:contentDescription="@string/call_menu_during_call_list2_tts" android:layout_toEndOf="@id/help_list_item_dot_4" helphub:image="@drawable/help_ic_speaker" style="@style/HelpItemDescText" />
            <TextView android:id="@id/help_list_item_dot_5" android:paddingTop="@dimen/desc_text_with_dot_margin_between" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_below="@id/help_list_item_4" style="@style/HelpItemDescTextDot" />
            <com.android.incallui.help.HelpHubTextView android:id="@id/help_list_item_5" android:paddingTop="@dimen/desc_text_with_dot_margin_between" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/call_menu_during_call_list1" android:layout_below="@id/help_list_item_4" android:contentDescription="@string/call_menu_during_call_list1_tts" android:layout_toEndOf="@id/help_list_item_dot_5" helphub:image="@drawable/help_ic_number" style="@style/HelpItemDescText" />
            <TextView android:id="@id/help_list_item_dot_6" android:paddingTop="@dimen/desc_text_with_dot_margin_between" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_below="@id/help_list_item_5" style="@style/HelpItemDescTextDot" />
            <com.android.incallui.help.HelpHubTextView android:id="@id/help_list_item_6" android:paddingTop="@dimen/desc_text_with_dot_margin_between" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/call_menu_during_call_list3" android:layout_below="@id/help_list_item_5" android:contentDescription="@string/call_menu_during_call_list3_tts" android:layout_toEndOf="@id/help_list_item_dot_6" helphub:image="@drawable/help_ic_mute" style="@style/HelpItemDescText" />
            <TextView android:id="@id/help_list_item_dot_7" android:paddingTop="@dimen/desc_text_with_dot_margin_between" android:paddingBottom="@dimen/desc_text_area_margin_bottom" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_below="@id/help_list_item_6" style="@style/HelpItemDescTextDot" />
            <com.android.incallui.help.HelpHubTextView android:id="@id/help_list_item_7" android:paddingTop="@dimen/desc_text_with_dot_margin_between" android:paddingBottom="@dimen/desc_text_area_margin_bottom" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/call_menu_during_call_list5" android:layout_below="@id/help_list_item_6" android:contentDescription="@string/call_menu_during_call_list5_tts" android:layout_toEndOf="@id/help_list_item_dot_7" helphub:image="@drawable/help_ic_end" style="@style/HelpItemDescText" />
        </RelativeLayout>
    </RelativeLayout>
</ScrollView>