<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="18.0sp" android:textStyle="bold" android:textColor="@android:color/black" android:id="@id/title" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="22.0dip" android:layout_marginTop="16.0dip" android:layout_marginRight="22.0dip" android:text="@string/save_shortcut" />
    <TextView android:textSize="18.0sp" android:textColor="@android:color/black" android:id="@id/message" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="22.0dip" android:layout_marginTop="16.0dip" android:layout_marginRight="22.0dip" android:layout_marginBottom="16.0dip" android:text="@string/ivr_shortcut_message" />
    <EditText android:id="@id/shortcutname" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="22.0dip" android:layout_marginTop="4.0dip" android:layout_marginRight="22.0dip" android:layout_marginBottom="16.0dip" android:maxLength="20" android:fontFamily="sans-serif" />
    <RelativeLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="-5.0dip" android:layout_marginRight="-5.0dip">
        <Button android:textStyle="bold" android:textColor="@android:color/holo_blue_dark" android:id="@id/discard" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/discard" android:layout_toLeftOf="@id/save" android:layout_alignParentTop="true" android:onClick="onDiscard" style="@android:style/DeviceDefault.Light.ButtonBar.AlertDialog" />
        <Button android:textStyle="bold" android:textColor="@android:color/holo_blue_dark" android:id="@id/save" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/save" android:layout_alignParentTop="true" android:layout_alignParentRight="true" android:onClick="onSave" android:layout_alignParentEnd="true" style="@android:style/DeviceDefault.Light.ButtonBar.AlertDialog" />
    </RelativeLayout>
</LinearLayout>